--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html> 
 <html>
+
 <head>
 <meta charset="utf-8">
 <title>Aplic. Web de jQuery Mobile</title>
 <script type="text/javascript" src="jquery-1.5.min.js"></script>
 <script type="text/javascript" src="jquery.mobile-1.0a3.min.js"></script>
 <script type="text/javascript" src="swipe.js"></script>
+<script type="text/javascript" src="video.js"></script>
 <script src="/phonegap.js" type="text/javascript"></script>
 <link href="jquery.mobile-1.0a3.min.css" rel="stylesheet" type="text/css">
+<link href="video-js.css" rel="stylesheet" type="text/css">
 
 </head> 
 <body> 
@@ -42,7 +45,13 @@
 		<h1>Página dos</h1>
 	</div>
 	<div data-role="content">	
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu mauris risus, pharetra tempor nisi. Etiam id libero eget diam convallis accumsan. Ut vel dapibus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sollicitudin malesuada orci, nec rhoncus nibh dictum ut. Fusce magna odio, molestie tempus rutrum nec, aliquet at mauris.
+		<video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="100%"
+      poster="video.jpg"
+      data-setup="{}">
+    <source src="video.mp4" type='video/mp4' />
+    <source src="video.ogv" type='video/ogg' />
+    
+  </video>
 	</div>
 	
 </div>
@@ -57,7 +66,7 @@
 	
   </div>
     
-   <div data-role="page" id="page4">
+<div data-role="page" id="page4">
 	<div data-role="header">
 		<h1>Página cuatro</h1>
 	</div>
