--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <script src="/phonegap.js" type="text/javascript"></script>
 <link href="jquery.mobile-1.0a3.min.css" rel="stylesheet" type="text/css">
 <link href="video-js.css" rel="stylesheet" type="text/css">
-
+<script>
+var video = document.getElementById('video');
+video.addEventListener('click',function(){
+  video.play();
+},false);
+</script>
 </head> 
 <body> 
 
@@ -45,13 +50,10 @@
 		<h1>Página dos</h1>
 	</div>
 	<div data-role="content">	
-		<video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="100%"
-      poster="video.jpg"
-      data-setup="{}">
-    <source src="video.mp4" type='video/mp4' />
-    <source src="video.ogv" type='video/ogg' />
-    
-  </video>
+		<video id="video" width="100%" controls="controls">
+<source src="video.m4v">
+<source src="video.ogv" type="video/ogg">
+</video>
 	</div>
 	
 </div>
