--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -11,71 +11,69 @@
 <script src="/phonegap.js" type="text/javascript"></script>
 <link href="jquery.mobile-1.0a3.min.css" rel="stylesheet" type="text/css">
 <link href="video-js.css" rel="stylesheet" type="text/css">
-<script>
-var video = document.getElementById('video');
-video.addEventListener('click',function(){
-  video.play();
-},false);
-</script>
-</head> 
-<body> 
+
+</head>
+<body>
 
 <div data-role="page" class="div.ui-pag">
-	<div data-role="header">
-		<h1>Página uno</h1>
-	</div>
-	<div data-role="content">	
-		<ul data-role="listview">
-			<li><a href="#page1">Página uno</a></li>
+<div data-role="header">
+<h1>Página uno</h1>
+</div>
+<div data-role="content">
+<ul data-role="listview">
+<li><a href="#page1">Página uno</a></li>
             <li><a href="#page2">Página dos</a></li>
-			<li><a href="#page3">Página tres</a></li>
+<li><a href="#page3">Página tres</a></li>
             <li><a href="#page4">Página cuatro</a></li>
-		</ul>		
-	</div>
-	
+</ul>
+</div>
+
 </div>
 
 <div data-role="page" id="page1">
-	<div data-role="header">
-		<h1>Página uno</h1>
-	</div>
-	<div data-role="content">	
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu mauris risus, pharetra tempor nisi. Etiam id libero eget diam convallis accumsan. Ut vel dapibus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sollicitudin malesuada orci, nec rhoncus nibh dictum ut. Fusce magna odio, molestie tempus rutrum nec, aliquet at mauris.	
-	</div>
-	
+<div data-role="header">
+<h1>Página uno</h1>
+</div>
+<div data-role="content">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu mauris risus, pharetra tempor nisi. Etiam id libero eget diam convallis accumsan. Ut vel dapibus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sollicitudin malesuada orci, nec rhoncus nibh dictum ut. Fusce magna odio, molestie tempus rutrum nec, aliquet at mauris.
+</div>
+
 </div>
 
 <div data-role="page" id="page2">
-	<div data-role="header">
-		<h1>Página dos</h1>
-	</div>
-	<div data-role="content">	
-		<video id="video" width="100%" controls="controls">
-<source src="video.m4v">
-<source src="video.ogv" type="video/ogg">
-</video>
-	</div>
-	
+<div data-role="header">
+<h1>Página dos</h1>
+</div>
+<div data-role="content">
+<video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="100%"
+      poster="video.jpg"
+      data-setup="{}">
+    <source src="video.mp4" type='video/mp4' />
+    <source src="video.ogv" type='video/ogg' />
+    
+  </video>
+</div>
+
 </div>
 
 <div data-role="page" id="page3">
-	<div data-role="header">
-		<h1>Página tres</h1>
-	</div>
-	<div data-role="content">	
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu mauris risus, pharetra tempor nisi. Etiam id libero eget diam convallis accumsan. Ut vel dapibus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sollicitudin malesuada orci, nec rhoncus nibh dictum ut. Fusce magna odio, molestie tempus rutrum nec, aliquet at mauris.	
-	</div>
-	
+<div data-role="header">
+<h1>Página tres</h1>
+</div>
+<div data-role="content">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu mauris risus, pharetra tempor nisi. Etiam id libero eget diam convallis accumsan. Ut vel dapibus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sollicitudin malesuada orci, nec rhoncus nibh dictum ut. Fusce magna odio, molestie tempus rutrum nec, aliquet at mauris.
+</div>
+
   </div>
     
 <div data-role="page" id="page4">
-	<div data-role="header">
-		<h1>Página cuatro</h1>
-	</div>
-	<div data-role="content">	
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu mauris risus, pharetra tempor nisi. Etiam id libero eget diam convallis accumsan. Ut vel dapibus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sollicitudin malesuada orci, nec rhoncus nibh dictum ut. Fusce magna odio, molestie tempus rutrum nec, aliquet at mauris.	
-	</div>
-	
+<div data-role="header">
+<h1>Página cuatro</h1>
+</div>
+<div data-role="content">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu mauris risus, pharetra tempor nisi. Etiam id libero eget diam convallis accumsan. Ut vel dapibus sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sollicitudin malesuada orci, nec rhoncus nibh dictum ut. Fusce magna odio, molestie tempus rutrum nec, aliquet at mauris.
+</div>
+
 </div>
 
 
